--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -39,7 +39,7 @@
 	* files.el (before-save-hook): Add `time-stamp' to the options.
 
 	* time-stamp.el (time-stamp): Recommend adding it to
-	`before-save-hook', rather than `write-file-functions'
+	`before-save-hook', rather than `write-file-functions'.
 	Make a similar change in `Commentary' section.
 
 2004-06-13  Kai Grossjohann  <kai.grossjohann@gmx.net>
