--- a/lispref/ChangeLog
+++ b/lispref/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-14  Juanma Barranquero  <lektu@terra.es>
+
+	* display.texi (Images): Document new delayed library loading,
+	variable `image-library-alist' and (existing but undocumented)
+	function `image-type-available-p'.
+
 2004-06-05  Richard M. Stallman  <rms@gnu.org>
 
 	* minibuf.texi (Minibuffer Completion): For INITIAL arg,
@@ -41,7 +47,7 @@
 	* lists.texi (Cons Cells): Explain dotted lists, true lists,
 	circular lists.
 	(List Elements): Explain handling of circular and dotted lists.
-	
+
 2004-05-19  Thien-Thi Nguyen  <ttn@gnu.org>
 
 	* modes.texi (Search-based Fontification): Fix typo.
