*** empty log message ***

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-14  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* dired.texi (Dired Enter): Mention conditions on `ls' switches.
+	(Dired and Find): Mention differences with ordinary Dired buffers.
+
 2004-06-13  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* autotype.texi (Copyrights, Timestamps): Recommend
