--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-15  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
+
+	* ps-print.el (ps-time-stamp-iso8601): Comment doc string of defalias.
+
 2004-06-15  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* dired-aux.el (dired-do-redisplay, dired-maybe-insert-subdir):
