--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-15  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* files.el (buffer-stale-function): Add hyperlink to emacs-xtra
+	manual to docstring.
+
 2004-06-15  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
 
 	* ps-print.el (ps-time-stamp-iso8601): Comment doc string of defalias.
