Revision: miles@gnu.org--gnu-2004/emacs--cvs-trunk--0--patch-410
Make sure image types are initialized for lookup too

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-16  Miles Bader  <miles@gnu.org>
+
+	* image.c (lookup_image_type): Initialize image type if necessary.
+
 2004-06-15  Kim F. Storm  <storm@cua.dk>
 
 	* xdisp.c (try_cursor_movement): Exclude header line from scroll
