--- a/lispref/ChangeLog
+++ b/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-21  Juanma Barranquero  <lektu@terra.es>
+
+	* display.texi (Images): Remove redundant @vindex directives.
+	Rewrite `image-library-alist' doc in active voice.
+
 2004-06-14  Juanma Barranquero  <lektu@terra.es>
 
 	* display.texi (Images): Document new delayed library loading,
