--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-23  Lars Hansen  <larsh@math.ku.dk>
+
+	* files.el (write-contents-functions): Doc fix.
+
 2004-06-21  Juanma Barranquero  <lektu@terra.es>
 
 	* image.el (image-library-alist): Rewrite docstring in active
